fix height issue and scrollbar for real

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: calc(100vh-56px);
+  /* height: calc(100vh-56px); */
   background-color: var(--bg-color) !important;
 }
 
@@ -51,4 +51,13 @@ input:focus-visible {
 ::placeholder {
   color: #9197a3;
   font-weight: normal;
+}
+
+.link {
+  color: inherit;
+}
+
+.link:hover {
+  color: inherit;
+  text-decoration: none;
 }
